# cursoPython

./: aula01.py  aula02.py  aula06.py  aula07.py  aula08.py  aula09.py  aula10.py  aula11.py  aula12.py  aula13.py  aula14.py  aula15.py  aula16.py  aula17.py  aula18.py  aula19.py  aula20.py  aula21.py  aula22.py  aula23.py  aula24.py  aula25.py  aula26.py
bdRelacionado/: 01_conexao.py  02_transacao.py  README.md  meuBanco.db
desafio/convensaoDados/: README.md  index.py
desafio/dados/: README.md  index.py
desafio/emails/: README.md  index.py
flask_project/: diobank.sqlite  introdução.txt  pyproject.toml
flask_project/src/: app.py  db.py  schema.sql
