[project]
name = "flask-project"
version = "0.1.0"
description = ""
authors = [
    {name = "manoel ferreira",email = "95552207+ManelFer@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask",
    "flask-sqlalchemy"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
